--- a/Challenges/gameoflife/index.html
+++ b/Challenges/gameoflife/index.html
@@ -36,10 +36,11 @@
          url: "/gof",
          dataType: "json",
          async: true,
-         data: "{\"grid\": ["+dataset+"]}",
-         success: function (d) {
+         data: "{\"grid\": ["+data+"]}",
+         success: function (data) {
+           
          }
-       })
+       });
      }
     </script>
 
